--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,10 +5,13 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>{% block page_name %}{% endblock page_name %}</title>
 </head>
 <body>
-    {% block content %}
-    {% endblock %}
+    {% include "partials/header.html" %}
+
+    {% block content %}{% endblock content%}
+
+    {% include "partials/footer.html" %}
 </body>
 </html>
