--- a/app/templates/rooms/search.html
+++ b/app/templates/rooms/search.html
@@ -4,8 +4,35 @@
     Search
 {% endblock page_title %}
 
-{% block content %}
-    <h2>Search</h2>
+{% block search-bar %}
+{% endblock %}
 
-    <h4>Searching by {{ city }}</h4>
+{% block content %}
+    <h2>Search!</h2>
+
+    <form action="{% url "rooms:search" %}" method="GET">
+        <div>
+            <label for="city">City</label>
+            <input type="text" value="{{ city }}" id="city" name="city" placeholder="Search By City">
+        </div>
+
+        <div>
+            <label for="country">Country</label>
+            <select name="country" id="country">
+                {% for country in countries %}
+                    <option value="{{ country.code }}">{{ country.name }}</option>
+                {% endfor %}
+            </select>
+        </div>
+
+        <div>
+            <label for="room_type">Room Type</label>
+            <select name="room_type" id="room_type">
+                {% for room_type in room_types %}
+                    <option value="{{ room_type.pk }}">{{ room_type.name }}</option>
+                {% endfor %}
+            </select>
+        </div>
+        <button type="submit">Search</button>
+    </form>
 {% endblock content %}
