--- a/app/templates/users/login.html
+++ b/app/templates/users/login.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block content %}
-    <form action="POST" action="{% url "users:login" %}">
+    <form action="{% url "users:login" %}" method="POST">
         {% csrf_token %}
         {{ form.as_p }}
         <button>Login</button>
