--- a/app/templates/users/login.html
+++ b/app/templates/users/login.html
@@ -8,6 +8,7 @@
 {% endblock %}
 
 {% block content %}
+    {% include 'partials/social_login.html' %}
     <form action="{% url "users:login" %}" method="POST">
         {% csrf_token %}
         {{ form.as_p }}
