--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,13 +11,19 @@
 </head>
 <body class="text-gray-800">
 <header class="container max-w-full flex items-center justify-between px-6 border-b border-gray-400">
-    <div class="flex items-center">
+    <div class="flex items-center w-1/3">
         <a href="{% url "core:home" %}">
             <img class="w-8" src="{% static "img/logo.png" %}" alt="logo.png">
         </a>
         {% block search-bar %}
-            <form action="{% url "rooms:search" %}" method="GET">
-                <input name="city" placeholder="Search By City" type="text" class="border px-2 py-1 rounded-sm">
+            <form action="{% url "rooms:search" %}" method="GET" class="w-9/12">
+                <input
+                        name="city"
+                        placeholder="Search By City"
+                        type="text"
+                        class="search-box border px-5 w-full
+                               font-medium text-gray-900 placeholder-gray-900
+                               py-3 rounded-sm w-64 shadow-md hover:shadow-lg focus:outline-none">
             </form>
         {% endblock search-bar %}
     </div>
