--- a/app/templates/partials/footer.html
+++ b/app/templates/partials/footer.html
@@ -1,3 +1,6 @@
-<footer>
-    &copy; Nbnb
+<footer class="container mx-auto text-center py-10 border-t font-medium text-gray-500 flex flex-col">
+    <span>
+         &copy; Nbnb clone project
+    </span>
+    <span>Reference from Nomad Coders. </span>
 </footer>
