--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,6 +26,7 @@
 
     {% block content %}{% endblock %}
 
+    {% include "partials/messags.html" %}
     {% include "partials/footer.html" %}
   </body>
 </html>
