--- a/app/templates/rooms/room_detail.html
+++ b/app/templates/rooms/room_detail.html
@@ -11,27 +11,27 @@
     </div>
     <h2>Amenities</h2>
     <h2>
-        By: {{ room.host.username }}
+        By: <a href="{{ room.host.get_absolute_url }}">{{ room.host.username }}</a>
         {% if room.host.superhost %}
             (superhost)
         {% endif %}
     </h2>
     <h3>Amenities</h3>
     <ul>
-    {% for a in room.amenities.all %}
-        <li>{{ a }}</li>
-    {% endfor %}
+        {% for a in room.amenities.all %}
+            <li>{{ a }}</li>
+        {% endfor %}
     </ul>
     <h3>Facilites</h3>
     <ul>
-    {% for a in room.facilites.all %}
-        <li>{{ a }}</li>
-    {% endfor %}
+        {% for a in room.facilites.all %}
+            <li>{{ a }}</li>
+        {% endfor %}
     </ul>
     <h3>House Ruules</h3>
     <ul>
-    {% for a in room.house_rules.all %}
-        <li>{{ a }}</li>
-    {% endfor %}
+        {% for a in room.house_rules.all %}
+            <li>{{ a }}</li>
+        {% endfor %}
     </ul>
 {% endblock %}
