--- a/app/templates/rooms/room_detail.html
+++ b/app/templates/rooms/room_detail.html
@@ -5,33 +5,12 @@
 {% endblock page_title %}
 
 {% block content %}
-    <div>
-        <h1>{{ room.name }}</h1>
-        <h3>{{ rooom.description }}</h3>
+    <div class="mt-5 container max-w-full h-75vh flex mb-20">
+        <div class="h-full w-1/2 bg-center bg-cover" style="background-image:url({{ room.first_photo }})"></div>
+        <div class="h-full w-1/2 flex flex-wrap">
+            {% for photo in room.get_next_four_photos %}
+                <div class="w-1/2 h-auto bg-cover bg-center border-gray-700 border" style="background-image: url({{ photo.file.url }})"></div>
+            {% endfor %}
+        </div>
     </div>
-    <h2>Amenities</h2>
-    <h2>
-        By: <a href="{{ room.host.get_absolute_url }}">{{ room.host.username }}</a>
-        {% if room.host.superhost %}
-            (superhost)
-        {% endif %}
-    </h2>
-    <h3>Amenities</h3>
-    <ul>
-        {% for a in room.amenities.all %}
-            <li>{{ a }}</li>
-        {% endfor %}
-    </ul>
-    <h3>Facilites</h3>
-    <ul>
-        {% for a in room.facilites.all %}
-            <li>{{ a }}</li>
-        {% endfor %}
-    </ul>
-    <h3>House Ruules</h3>
-    <ul>
-        {% for a in room.house_rules.all %}
-            <li>{{ a }}</li>
-        {% endfor %}
-    </ul>
 {% endblock %}
