--- a/app/assets/scss/styles.scss
+++ b/app/assets/scss/styles.scss
@@ -20,7 +20,7 @@
   @apply text-center rounded-sm py-5 font-light text-lg w-full;
 }
 
-.btn_link {
+.btn-link {
   @apply text-center py-3 rounded-lg font-light text-lg w-full text-white bg-red-500;
 }
 
