--- a/app/assets/scss/styles.scss
+++ b/app/assets/scss/styles.scss
@@ -105,4 +105,8 @@ form {
   grid-gap: 10px;
   justify-items: center;
 }
+
+.cal-number {
+  @apply w-full text-center rounded p-1 cursor-pointer;
+}
 @tailwind utilities;
