--- a/app/templates/rooms/room_detail.html
+++ b/app/templates/rooms/room_detail.html
@@ -104,9 +104,9 @@
                             {% for day in calendar.get_days %}
                                 {% if day.number != 0 %}
                                     {% if day.past %}
-                                        <span class="rounded bg-gray-200 w-full text-center p-1 text-gray-300">{{ day }}</span>
+                                        <span class="cal-number bg-gray-200 text-gray-400">{{ day }}</span>
                                     {% else %}
-                                        <span class="bg-gray-200 w-full text-center rounded text-gray-700 p-1 hover:bg-teal-400 hover:text-white cursor-pointer">{{ day }}</span>
+                                        <span class="cal-number bg-gray-200 text-gray-700 hover:bg-teal-400 hover:text-white cursor-pointer">{{ day }}</span>
                                     {% endif %}
                                 {% else %}
                                     <span></span>
