--- a/app/templates/rooms/room_detail.html
+++ b/app/templates/rooms/room_detail.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
+{% load sexy_capitals %}
 
 {% block page_title %}
     {{ room.name }}
@@ -92,6 +93,7 @@
             {% if room.host == user %}
                 <a href="{% url 'rooms:edit' room.pk %}" class="btn-link block">Edit Room</a>
             {% elif not request.session.is_hosting %}
+                {{ 'somthing' | sexy_capitals }}
                 {% for calendar in room.get_calendars %}
                     <div class="mb-20">
                         <span class="text-center font-semibold text-lg block mb-8">{{ calendar.get_month }} / {{ calendar.year }}</span>
