--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static i18n %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    <title>{% block page_title %}{% endblock page_title %}| Nbnb</title>
+    <title>{% block page_title %}{% endblock page_title %}| Airbnb</title>
 </head>
 <body class="text-gray-800 mt-24 font-light">
 {% include "partials/messags.html" %}
@@ -20,7 +20,8 @@
         {% block search-bar %}
             <form method="get" action="{% url 'rooms:search' %}" class="w-9/12">
                 <input class="search-box border px-5 w-full font-medium text-gray-900 placeholder-gray-600 py-3 rounded-sm w-64 shadow-md hover:shadow-lg focus:outline-none"
-                       name="city" placeholder="Search By City"/>
+                       name="city"
+                       placeholder={% trans "Search By City"%}/>
             </form>
         {% endblock search-bar %}
     </div>
@@ -28,7 +29,9 @@
 </header>
 
 {% block content %}{% endblock %}
+<script>
 
+</script>
 
 {% include "partials/footer.html" %}
 </body>
