--- a/app/templates/partials/footer.html
+++ b/app/templates/partials/footer.html
@@ -1,8 +1,16 @@
 {% load i18n %}
 
-<footer class="container mx-auto text-center py-10 border-t font-medium text-gray-500 flex flex-col">
-    <span>
-         &copy; Nbnb clone project
-    </span>
-    <span>{% trans "Reference from Nomad Coders." %} </span>
+<footer class="container mx-auto text-center py-10 border-t font-medium text-gray-500">
+    <div class="flex flex-col">
+        <span>
+             &copy; Nbnb clone project
+        </span>
+        <span>{% trans "Reference from Nomad Coders." %} </span>
+    </div>
+    <div class="mt-10 flex">
+        <select class="w-1/5 h-8" id="js-lang">
+            <option value="en">English</option>
+            <option value="ko">Korean</option>
+        </select>
+    </div>
 </footer>
