--- a/app/templates/rooms/room_detail.html
+++ b/app/templates/rooms/room_detail.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load is_booked i18n %}
+{% load is_booked on_favs i18n %}
 
 {% block page_title %}
     {{ room.name }}
@@ -29,7 +29,16 @@
                     <span class="mt-2 text-gray-500">{{ room.host.first_name }}</span>
                 </a>
             </div>
-            <a class="btn-link block mb-10 w-2/6" href="{% url "lists:save-room" room.pk %}">{% trans "Save to Favorite" %}</a>
+            {% if room.host !=  user %}
+                {% on_favs room as on_favs_boolean %}
+                {% if on_favs_boolean %}
+                    <a class="btn-link block mb-10 w-2/6"
+                       href="{% url "lists:save-room" room.pk %}">{% trans "Remove from Favorite" %}</a>
+                {% else %}
+                    <a class="btn-link block mb-10 w-2/6"
+                       href="{% url "lists:save-room" room.pk %}">{% trans "Save to Favorite" %}</a>
+                {% endif %}
+            {% endif %}
             <div class="flex border-section">
                 <span class="mr-5 font-light">{{ room.room_type }}</span>
                 <span class="mr-5 font-light">{{ room.beds }} bed{{ room.beds|pluralize }}</span>
@@ -111,7 +120,8 @@
                                         {% elif is_booked_bool %}
                                             <span class="cal-number bg-gray-200 text-gray-400 line-through">{{ day }}</span>
                                         {% else %}
-                                            <a href="{% url "reservations:create" room.pk day.year day.month day.number %}" class="cal-number bg-gray-200 text-gray-700 hover:bg-teal-400 hover:text-white hover:font-medium">{{ day }}</a>
+                                            <a href="{% url "reservations:create" room.pk day.year day.month day.number %}"
+                                               class="cal-number bg-gray-200 text-gray-700 hover:bg-teal-400 hover:text-white hover:font-medium">{{ day }}</a>
                                         {% endif %}
                                     {% else %}
                                         <span></span>
