--- a/app/templates/rooms/room_detail.html
+++ b/app/templates/rooms/room_detail.html
@@ -32,11 +32,11 @@
             {% if room.host !=  user %}
                 {% on_favs room as on_favs_boolean %}
                 {% if on_favs_boolean %}
-                    <a class="btn-link block mb-10 w-2/6"
-                       href="{% url "lists:save-room" room.pk %}">{% trans "Remove from Favorite" %}</a>
+                    <a class="block mb-10 w-2/6 text-teal-600 font-bold"
+                       href="{% url 'lists:toggle-room' room.pk %}?action=remove">{% trans "Remove from Favorites" %}</a>
                 {% else %}
-                    <a class="btn-link block mb-10 w-2/6"
-                       href="{% url "lists:save-room" room.pk %}">{% trans "Save to Favorite" %}</a>
+                    <a class="block mb-10 w-2/6 text-teal-600 font-bold"
+                       href="{% url 'lists:toggle-room' room.pk %}?action=add">{% trans "Save to Favorites" %}</a>
                 {% endif %}
             {% endif %}
             <div class="flex border-section">
